refactor css style

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <header>
             <nav class="menu">
                 <ul class="menu-itens">
-                    <li><a class="menu-link" href="#">HOME</a></li>
-                    <li><a class="menu-link" href="#title-article">ABSTRACT</a></li>
-                    <li><a class="menu-link" href="#title-cast">CAST</a></li>
-                    <li><a class="menu-link" href="#title-characters">CHARACTERS</a></li>
+                    <li><a class="menu-link md-font" href="#">HOME</a></li>
+                    <li><a class="menu-link md-font" href="#title-article">ABSTRACT</a></li>
+                    <li><a class="menu-link md-font" href="#title-cast">CAST</a></li>
+                    <li><a class="menu-link md-font" href="#title-characters">CHARACTERS</a></li>
                 </ul>
             </nav>
             <div class="title">
-                <h1>Star Wars</h1>
+                <h1 class="sw-font">Star Wars</h1>
                 <pre class="pre-title md-font">THE</pre>
                 <h2 class="main-title md-font">MANDALORIAN</h1>
             </div>
@@ -63,56 +63,75 @@
                 reasons. </p>
         </article>
     </section>
-    <div class="characters">
+
+    <section class="characters">
         <h2 id="title-characters" class="md-font all-title">CHARACTERS</h2>
         <ul id="characters">
             <li class="character-item">
-                <a class="character-image" href="assets/images/characters/the-din-djarin.jpg"><img
-                        src="/assets/images/characters/the-din-djarin.jpg"></a>
-                <figcaption>Din Djarin</figcaption>
+                <figure>
+                    <a class="character-image" href="assets/images/characters/the-din-djarin.jpg"><img
+                            src="/assets/images/characters/the-din-djarin.jpg"></a>
+                    <figcaption>Din Djarin</figcaption>
+                </figure>
             </li>
             <li class="character-item">
-                <a class="character-image" href="assets/images/characters/grogu.png"><img
-                        src="/assets/images/characters/grogu.png"></a>
-                <figcaption>Grogu</figcaption>
+                <figure>
+                    <a class="character-image" href="assets/images/characters/grogu.png"><img
+                            src="/assets/images/characters/grogu.png"></a>
+                    <figcaption>Grogu</figcaption>
+                </figure>
             </li>
             <li class="character-item">
-                <a class="character-image" href="assets/images/characters/cara-dune.jpg"><img
-                        src="/assets/images/characters/cara-dune.jpg"></a>
-                <figcaption>Cara Dune</figcaption>
+                <figure>
+                    <a class="character-image" href="assets/images/characters/cara-dune.jpg"><img
+                            src="/assets/images/characters/cara-dune.jpg"></a>
+                    <figcaption>Cara Dune</figcaption>
+                </figure>
             </li>
             <li class="character-item">
-                <a class="character-image" href="assets/images/characters/greef-karga-.jpeg"><img
-                        src="/assets/images/characters/greef-karga-.jpeg"></a>
-                <figcaption>Greef Karga</figcaption>
+                <figure>
+                    <a class="character-image" href="assets/images/characters/greef-karga-.jpeg"><img
+                            src="/assets/images/characters/greef-karga-.jpeg"></a>
+                    <figcaption>Greef Karga</figcaption>
+                </figure>
             </li>
             <li class="character-item">
-                <a class="character-image" href="assets/images/characters/boba-fett.jpg"><img
-                        src="/assets/images/characters/boba-fett.jpg"></a>
-                <figcaption>Boba Fett</figcaption>
+                <figure>
+                    <a class="character-image" href="assets/images/characters/boba-fett.jpg"><img
+                            src="/assets/images/characters/boba-fett.jpg"></a>
+                    <figcaption>Boba Fett</figcaption>
+                </figure>
             </li>
             <li class="character-item">
-                <a class="character-image" href="assets/images/characters/bo-katan.jpeg"><img
-                        src="/assets/images/characters/bo-katan.jpeg"></a>
-                <figcaption>Bo-Katan</figcaption>
+                <figure>
+                    <a class="character-image" href="assets/images/characters/bo-katan.jpeg"><img
+                            src="/assets/images/characters/bo-katan.jpeg"></a>
+                    <figcaption>Bo-Katan</figcaption>
+                </figure>
             </li>
             <li class="character-item">
-                <a class="character-image" href="assets/images/characters/ahsoka-tano.jpeg"><img
-                        src="/assets/images/characters/ahsoka-tano.jpeg"></a>
-                <figcaption>Ahsoka Tano</figcaption>
+                <figure>
+                    <a class="character-image" href="assets/images/characters/ahsoka-tano.jpeg"><img
+                            src="/assets/images/characters/ahsoka-tano.jpeg"></a>
+                    <figcaption>Ahsoka Tano</figcaption>
+                </figure>
             </li>
             <li class="character-item">
-                <a class="character-image" href="assets/images/characters/fennec-shand.jpeg"><img
-                        src="/assets/images/characters/fennec-shand.jpeg"></a>
-                <figcaption>Fennec Shand</figcaption>
+                <figure>
+                    <a class="character-image" href="assets/images/characters/fennec-shand.jpeg"><img
+                            src="/assets/images/characters/fennec-shand.jpeg"></a>
+                    <figcaption>Fennec Shand</figcaption>
+                </figure>
             </li>
             <li class="character-item">
-                <a class="character-image" href="assets/images/characters/moff-gideon.jpeg"><img
-                        src="/assets/images/characters/moff-gideon.jpeg"></a>
-                <figcaption>Moff Gideon</figcaption>
+                <figure>
+                    <a class="character-image" href="assets/images/characters/moff-gideon.jpeg"><img
+                            src="/assets/images/characters/moff-gideon.jpeg"></a>
+                    <figcaption>Moff Gideon</figcaption>
+                </figure>
             </li>
         </ul>
-    </div>
+    </section>
 
     <footer class="footer">
         <h3 class="md-font">DEVELOPED BY CRISTIAN PENTEADO - 2021</h3>
