--- a/index.html
+++ b/index.html
@@ -71,63 +71,63 @@
                 <figure>
                     <a class="character-image" href="assets/images/characters/the-din-djarin.jpg"><img
                             src="/assets/images/characters/the-din-djarin.jpg"></a>
-                    <figcaption>Din Djarin</figcaption>
+                    <figcaption class="md-font">Din Djarin</figcaption>
                 </figure>
             </li>
             <li class="character-item">
                 <figure>
                     <a class="character-image" href="assets/images/characters/grogu.png"><img
                             src="/assets/images/characters/grogu.png"></a>
-                    <figcaption>Grogu</figcaption>
+                    <figcaption class="md-font">Grogu</figcaption>
                 </figure>
             </li>
             <li class="character-item">
                 <figure>
                     <a class="character-image" href="assets/images/characters/cara-dune.jpg"><img
                             src="/assets/images/characters/cara-dune.jpg"></a>
-                    <figcaption>Cara Dune</figcaption>
+                    <figcaption class="md-font">Cara Dune</figcaption>
                 </figure>
             </li>
             <li class="character-item">
                 <figure>
                     <a class="character-image" href="assets/images/characters/greef-karga-.jpeg"><img
                             src="/assets/images/characters/greef-karga-.jpeg"></a>
-                    <figcaption>Greef Karga</figcaption>
+                    <figcaption class="md-font">Greef Karga</figcaption>
                 </figure>
             </li>
             <li class="character-item">
                 <figure>
                     <a class="character-image" href="assets/images/characters/boba-fett.jpg"><img
                             src="/assets/images/characters/boba-fett.jpg"></a>
-                    <figcaption>Boba Fett</figcaption>
+                    <figcaption class="md-font">Boba Fett</figcaption>
                 </figure>
             </li>
             <li class="character-item">
                 <figure>
                     <a class="character-image" href="assets/images/characters/bo-katan.jpeg"><img
                             src="/assets/images/characters/bo-katan.jpeg"></a>
-                    <figcaption>Bo-Katan</figcaption>
+                    <figcaption class="md-font">Bo-Katan</figcaption>
                 </figure>
             </li>
             <li class="character-item">
                 <figure>
                     <a class="character-image" href="assets/images/characters/ahsoka-tano.jpeg"><img
                             src="/assets/images/characters/ahsoka-tano.jpeg"></a>
-                    <figcaption>Ahsoka Tano</figcaption>
+                    <figcaption class="md-font">Ahsoka Tano</figcaption>
                 </figure>
             </li>
             <li class="character-item">
                 <figure>
                     <a class="character-image" href="assets/images/characters/fennec-shand.jpeg"><img
                             src="/assets/images/characters/fennec-shand.jpeg"></a>
-                    <figcaption>Fennec Shand</figcaption>
+                    <figcaption class="md-font">Fennec Shand</figcaption>
                 </figure>
             </li>
             <li class="character-item">
                 <figure>
                     <a class="character-image" href="assets/images/characters/moff-gideon.jpeg"><img
                             src="/assets/images/characters/moff-gideon.jpeg"></a>
-                    <figcaption>Moff Gideon</figcaption>
+                    <figcaption class="md-font">Moff Gideon</figcaption>
                 </figure>
             </li>
         </ul>
