add image to dark/light theme

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <div class="container">
         <header>
             <nav class="menu">
+                <div class="theme">
+                    <img class="color-theme" src="assets/images/theme.png">
+                </div>
                 <ul class="menu-itens">
                     <li><a class="menu-link md-font" href="#">HOME</a></li>
                     <li><a class="menu-link md-font" href="#title-article">ABSTRACT</a></li>
