add animation in icon to set theme, #2

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header>
             <nav class="menu colors-default">
                 <div class="theme">
-                    <img class="color-theme" src="assets/images/theme.png" @click="setTheme()">
+                    <img class="color-theme" src="assets/images/theme.png" @click="setTheme()" ref="icon" >
                 </div>
                 <ul class="menu-itens">
                     <li><a class="menu-link md-font colors-default" href="#">HOME</a></li>
@@ -84,63 +84,63 @@
                 <li class="character-item">
                     <figure>
                         <a class="character-image" href="assets/images/characters/the-din-djarin.jpg"><img
-                                src="/assets/images/characters/the-din-djarin.jpg"></a>
+                                ref="image" src="/assets/images/characters/the-din-djarin.jpg"></a>
                         <figcaption class="md-font">Din Djarin</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
                         <a class="character-image" href="assets/images/characters/grogu.png"><img
-                                src="/assets/images/characters/grogu.png"></a>
+                                ref="image" src="/assets/images/characters/grogu.png"></a>
                         <figcaption class="md-font">Grogu</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
                         <a class="character-image" href="assets/images/characters/cara-dune.jpg"><img
-                                src="/assets/images/characters/cara-dune.jpg"></a>
+                                ref="image" src="/assets/images/characters/cara-dune.jpg"></a>
                         <figcaption class="md-font">Cara Dune</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
                         <a class="character-image" href="assets/images/characters/greef-karga-.jpeg"><img
-                                src="/assets/images/characters/greef-karga-.jpeg"></a>
+                                ref="image" src="/assets/images/characters/greef-karga-.jpeg"></a>
                         <figcaption class="md-font">Greef Karga</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
                         <a class="character-image" href="assets/images/characters/boba-fett.jpg"><img
-                                src="/assets/images/characters/boba-fett.jpg"></a>
+                                ref="image" src="/assets/images/characters/boba-fett.jpg"></a>
                         <figcaption class="md-font">Boba Fett</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
                         <a class="character-image" href="assets/images/characters/bo-katan.jpeg"><img
-                                src="/assets/images/characters/bo-katan.jpeg"></a>
+                                ref="image" src="/assets/images/characters/bo-katan.jpeg"></a>
                         <figcaption class="md-font">Bo-Katan</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
                         <a class="character-image" href="assets/images/characters/ahsoka-tano.jpeg"><img
-                                src="/assets/images/characters/ahsoka-tano.jpeg"></a>
+                                ref="image" src="/assets/images/characters/ahsoka-tano.jpeg"></a>
                         <figcaption class="md-font">Ahsoka Tano</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
                         <a class="character-image" href="assets/images/characters/fennec-shand.jpeg"><img
-                                src="/assets/images/characters/fennec-shand.jpeg"></a>
+                                ref="image" src="/assets/images/characters/fennec-shand.jpeg"></a>
                         <figcaption class="md-font">Fennec Shand</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
                         <a class="character-image" href="assets/images/characters/moff-gideon.jpeg"><img
-                                src="/assets/images/characters/moff-gideon.jpeg"></a>
+                                ref="image" src="/assets/images/characters/moff-gideon.jpeg"></a>
                         <figcaption class="md-font">Moff Gideon</figcaption>
                     </figure>
                 </li>
