--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header>
             <nav class="menu colors-default">
                 <div class="theme">
-                    <img class="color-theme" src="assets/images/theme.png" @click="setTheme()" ref="icon" >
+                    <img class="color-theme" src="assets/images/theme.png" @click="setTheme()" ref="icon">
                 </div>
                 <ul class="menu-itens">
                     <li><a class="menu-link md-font colors-default" href="#">HOME</a></li>
@@ -83,68 +83,76 @@
             <ul id="characters">
                 <li class="character-item">
                     <figure>
-                        <a class="character-image" href="assets/images/characters/the-din-djarin.jpg"><img
-                                ref="image" src="/assets/images/characters/the-din-djarin.jpg"></a>
+                        <a class="character-image" href="assets/images/characters/the-din-djarin.jpg"><img ref="image"
+                                src="/assets/images/characters/the-din-djarin.jpg"></a>
                         <figcaption class="md-font">Din Djarin</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
-                        <a class="character-image" href="assets/images/characters/grogu.png"><img
-                                ref="image" src="/assets/images/characters/grogu.png"></a>
+                        <a class="character-image" href="assets/images/characters/grogu.png"><img ref="image"
+                                src="/assets/images/characters/grogu.png"></a>
                         <figcaption class="md-font">Grogu</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
-                        <a class="character-image" href="assets/images/characters/cara-dune.jpg"><img
-                                ref="image" src="/assets/images/characters/cara-dune.jpg"></a>
+                        <a class="character-image" href="assets/images/characters/cara-dune.jpg"><img ref="image"
+                                src="/assets/images/characters/cara-dune.jpg"></a>
                         <figcaption class="md-font">Cara Dune</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
-                        <a class="character-image" href="assets/images/characters/greef-karga-.jpeg"><img
-                                ref="image" src="/assets/images/characters/greef-karga-.jpeg"></a>
+                        <a class="character-image" href="assets/images/characters/greef-karga-.jpeg"><img ref="image"
+                                src="/assets/images/characters/greef-karga-.jpeg"></a>
                         <figcaption class="md-font">Greef Karga</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
-                        <a class="character-image" href="assets/images/characters/boba-fett.jpg"><img
-                                ref="image" src="/assets/images/characters/boba-fett.jpg"></a>
+                        <a class="character-image" href="assets/images/characters/boba-fett.jpg"><img ref="image"
+                                src="/assets/images/characters/boba-fett.jpg"></a>
                         <figcaption class="md-font">Boba Fett</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
-                        <a class="character-image" href="assets/images/characters/bo-katan.jpeg"><img
-                                ref="image" src="/assets/images/characters/bo-katan.jpeg"></a>
+                        <a class="character-image" href="assets/images/characters/bo-katan.jpeg"><img ref="image"
+                                src="/assets/images/characters/bo-katan.jpeg"></a>
                         <figcaption class="md-font">Bo-Katan</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
-                        <a class="character-image" href="assets/images/characters/ahsoka-tano.jpeg"><img
-                                ref="image" src="/assets/images/characters/ahsoka-tano.jpeg"></a>
+                        <a class="character-image" href="assets/images/characters/ahsoka-tano.jpeg"><img ref="image"
+                                src="/assets/images/characters/ahsoka-tano.jpeg"></a>
                         <figcaption class="md-font">Ahsoka Tano</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
-                        <a class="character-image" href="assets/images/characters/fennec-shand.jpeg"><img
-                                ref="image" src="/assets/images/characters/fennec-shand.jpeg"></a>
+                        <a class="character-image" href="assets/images/characters/fennec-shand.jpeg"><img ref="image"
+                                src="/assets/images/characters/fennec-shand.jpeg"></a>
                         <figcaption class="md-font">Fennec Shand</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
-                        <a class="character-image" href="assets/images/characters/moff-gideon.jpeg"><img
-                                ref="image" src="/assets/images/characters/moff-gideon.jpeg"></a>
+                        <a class="character-image" href="assets/images/characters/moff-gideon.jpeg"><img ref="image"
+                                src="/assets/images/characters/moff-gideon.jpeg"></a>
                         <figcaption class="md-font">Moff Gideon</figcaption>
                     </figure>
                 </li>
             </ul>
+        </section>
+        <section class="fb-plugin">
+            <div class="fb-page" data-href="https://www.facebook.com/the.mandalorian.page/" data-tabs="timeline"
+                data-width="800" data-height="100" data-small-header="false" data-adapt-container-width="false"
+                data-hide-cover="false" data-show-facepile="true">
+                <blockquote cite="https://www.facebook.com/the.mandalorian.page/" class="fb-xfbml-parse-ignore"><a
+                        href="https://www.facebook.com/the.mandalorian.page/">The Mandalorian Page</a></blockquote>
+            </div>
         </section>
 
         <footer class="footer">
@@ -161,6 +169,10 @@
 
         </footer>
     </div>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous"
+        src="https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v10.0&appId=845482559160084&autoLogAppEvents=1"
+        nonce="ryG8KI14"></script>
     <script src="js/index.js"></script>
 </body>
 
