correct the url images

--- a/index.html
+++ b/index.html
@@ -84,63 +84,63 @@
                 <li class="character-item">
                     <figure>
                         <a class="character-image" href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/the-din-djarin.jpg"><img ref="image"
-                                src="/assets/images/characters/the-din-djarin.jpg"></a>
+                                src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/the-din-djarin.jpg"></a>
                         <figcaption class="md-font">Din Djarin</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
                         <a class="character-image" href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/grogu.png"><img ref="image"
-                                src="/assets/images/characters/grogu.png"></a>
+                                src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/grogu.png"></a>
                         <figcaption class="md-font">Grogu</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
                         <a class="character-image" href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/cara-dune.jpg"><img ref="image"
-                                src="/assets/images/characters/cara-dune.jpg"></a>
+                                src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/cara-dune.jpg"></a>
                         <figcaption class="md-font">Cara Dune</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
                         <a class="character-image" href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/greef-karga-.jpeg"><img ref="image"
-                                src="/assets/images/characters/greef-karga-.jpeg"></a>
+                                src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/greef-karga-.jpeg"></a>
                         <figcaption class="md-font">Greef Karga</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
                         <a class="character-image" href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/boba-fett.jpg"><img ref="image"
-                                src="/assets/images/characters/boba-fett.jpg"></a>
+                                src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/boba-fett.jpg"></a>
                         <figcaption class="md-font">Boba Fett</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
                         <a class="character-image" href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/bo-katan.jpeg"><img ref="image"
-                                src="/assets/images/characters/bo-katan.jpeg"></a>
+                                src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/bo-katan.jpeg"></a>
                         <figcaption class="md-font">Bo-Katan</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
                         <a class="character-image" href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/ahsoka-tano.jpeg"><img ref="image"
-                                src="/assets/images/characters/ahsoka-tano.jpeg"></a>
+                                src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/ahsoka-tano.jpeg"></a>
                         <figcaption class="md-font">Ahsoka Tano</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
                         <a class="character-image" href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/fennec-shand.jpeg"><img ref="image"
-                                src="/assets/images/characters/fennec-shand.jpeg"></a>
+                                src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/fennec-shand.jpeg"></a>
                         <figcaption class="md-font">Fennec Shand</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
                         <a class="character-image" href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/moff-gideon.jpeg"><img ref="image"
-                                src="/assets/images/characters/moff-gideon.jpeg"></a>
+                                src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/moff-gideon.jpeg"></a>
                         <figcaption class="md-font">Moff Gideon</figcaption>
                     </figure>
                 </li>
