ajust responsive facebook integration plugin

--- a/index.html
+++ b/index.html
@@ -83,63 +83,81 @@
             <ul id="characters">
                 <li class="character-item">
                     <figure>
-                        <a class="character-image" href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/the-din-djarin.jpg"><img ref="image"
+                        <a class="character-image"
+                            href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/the-din-djarin.jpg"><img
+                                ref="image"
                                 src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/the-din-djarin.jpg"></a>
                         <figcaption class="md-font">Din Djarin</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
-                        <a class="character-image" href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/grogu.png"><img ref="image"
+                        <a class="character-image"
+                            href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/grogu.png"><img
+                                ref="image"
                                 src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/grogu.png"></a>
                         <figcaption class="md-font">Grogu</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
-                        <a class="character-image" href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/cara-dune.jpg"><img ref="image"
+                        <a class="character-image"
+                            href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/cara-dune.jpg"><img
+                                ref="image"
                                 src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/cara-dune.jpg"></a>
                         <figcaption class="md-font">Cara Dune</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
-                        <a class="character-image" href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/greef-karga-.jpeg"><img ref="image"
+                        <a class="character-image"
+                            href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/greef-karga-.jpeg"><img
+                                ref="image"
                                 src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/greef-karga-.jpeg"></a>
                         <figcaption class="md-font">Greef Karga</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
-                        <a class="character-image" href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/boba-fett.jpg"><img ref="image"
+                        <a class="character-image"
+                            href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/boba-fett.jpg"><img
+                                ref="image"
                                 src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/boba-fett.jpg"></a>
                         <figcaption class="md-font">Boba Fett</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
-                        <a class="character-image" href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/bo-katan.jpeg"><img ref="image"
+                        <a class="character-image"
+                            href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/bo-katan.jpeg"><img
+                                ref="image"
                                 src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/bo-katan.jpeg"></a>
                         <figcaption class="md-font">Bo-Katan</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
-                        <a class="character-image" href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/ahsoka-tano.jpeg"><img ref="image"
+                        <a class="character-image"
+                            href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/ahsoka-tano.jpeg"><img
+                                ref="image"
                                 src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/ahsoka-tano.jpeg"></a>
                         <figcaption class="md-font">Ahsoka Tano</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
-                        <a class="character-image" href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/fennec-shand.jpeg"><img ref="image"
+                        <a class="character-image"
+                            href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/fennec-shand.jpeg"><img
+                                ref="image"
                                 src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/fennec-shand.jpeg"></a>
                         <figcaption class="md-font">Fennec Shand</figcaption>
                     </figure>
                 </li>
                 <li class="character-item">
                     <figure>
-                        <a class="character-image" href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/moff-gideon.jpeg"><img ref="image"
+                        <a class="character-image"
+                            href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/moff-gideon.jpeg"><img
+                                ref="image"
                                 src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/moff-gideon.jpeg"></a>
                         <figcaption class="md-font">Moff Gideon</figcaption>
                     </figure>
@@ -148,7 +166,7 @@
         </section>
         <section class="fb-plugin">
             <div class="fb-page" data-href="https://www.facebook.com/the.mandalorian.page/" data-tabs="timeline"
-                data-width="800" data-height="100" data-small-header="false" data-adapt-container-width="false"
+                data-width="200" data-height="100" data-small-header="false" data-adapt-container-width="true"
                 data-hide-cover="false" data-show-facepile="true">
                 <blockquote cite="https://www.facebook.com/the.mandalorian.page/" class="fb-xfbml-parse-ignore"><a
                         href="https://www.facebook.com/the.mandalorian.page/">The Mandalorian Page</a></blockquote>
