--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <title>Welcome to The Mandalorian Web Page</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="shortcut icon" href="/assets/images/favicon.ico" type="image/x-icon">
-    <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/index.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/theme.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/nav.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/mainTitle.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/mainImage.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/titleItem.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/section.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/character.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/facebookPlugin.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/footer.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/socialLinks.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/responsive.css'>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
