--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <meta name="google-site-verification" content="KVIg8M21w1EL6VSV76gfodOOYQgBoqmrL1Tp94bXB9c" />
 </head>
 
 <body>
