remove local images and add image bucket link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Welcome to The Mandalorian Web Page</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="shortcut icon" href="/assets/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/favicon/favicon.ico" type="image/x-icon">
     <link rel='stylesheet' type='text/css' media='screen' href='css/index.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='css/theme.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='css/nav.css'>
@@ -38,7 +38,7 @@
         <header>
             <nav class="menu colors-default">
                 <div class="theme">
-                    <img class="color-theme" src="assets/images/theme.png" @click="setTheme()" ref="icon">
+                    <img class="color-theme" src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/main/theme.png" @click="setTheme()" ref="icon">
                 </div>
                 <ul class="menu-itens">
                     <li><a class="menu-link md-font colors-default" href="#">HOME</a></li>
@@ -52,7 +52,7 @@
                 <pre class="pre-title md-font">THE</pre>
                 <h2 class="main-title md-font">MANDALORIAN</h1>
             </div>
-            <img src="assets/images/main.jpg">
+            <img src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/main/main.jpg">
         </header>
         <section class="about">
             <h2 id="title-article" class="md-font all-title">ABSTRACT</h2>
@@ -197,11 +197,11 @@
             <h3 class="md-font">DEVELOPED BY CRISTIAN PENTEADO - 2021</h3>
             <ul class="social-media-list">
                 <li class="social-media-item"><a href="https://github.com/cristianpdev" target="_blank"><img
-                            class="social-media-image" src="assets/images/social-medias/gh.svg" alt="Github"></a></li>
+                            class="social-media-image" src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/social-medias/github.svg" alt="Github"></a></li>
                 <li class="social-media-item"><a href="https://twitter.com/cristianpdev" target="_blank"><img
-                            class="social-media-image" src="assets/images/social-medias/tw.svg" alt="Twitter"></a></li>
+                            class="social-media-image" src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/social-medias/twitter.svg" alt="Twitter"></a></li>
                 <li class="social-media-item"><a href="https://linkedin.com/in/cristian-penteado-6ab241177/"
-                        target="_blank"><img class="social-media-image" src="assets/images/social-medias/lkd.svg"
+                        target="_blank"><img class="social-media-image" src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/social-medias/linkedin.svg"
                             alt="Linkedin"></a></li>
             </ul>
 
