ajust dark and light theme title, #12

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             </nav>
             <div class="title">
                 <pre class="sw-font sw-pre">Star Wars</pre>
-                <pre class="pre-title">THE</pre>
-                <hr>
+                <pre class="pre-title" ref="pre">THE</pre>
+                <hr class="hr-dark" ref="hr">
                 <h1 class="main-title md-font">Mandalorian</h1>
             </div>
             <img src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/main/main.jpg">
@@ -109,7 +109,6 @@
                     <figure>
                         <a class="character-image"
                             href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/the-din-djarin.jpg"><img
-                                ref="image"
                                 src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/the-din-djarin.jpg"></a>
                         <figcaption class="md-font">Din Djarin</figcaption>
                     </figure>
@@ -118,7 +117,6 @@
                     <figure>
                         <a class="character-image"
                             href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/grogu.png"><img
-                                ref="image"
                                 src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/grogu.png"></a>
                         <figcaption class="md-font">Grogu</figcaption>
                     </figure>
@@ -127,7 +125,6 @@
                     <figure>
                         <a class="character-image"
                             href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/cara-dune.jpg"><img
-                                ref="image"
                                 src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/cara-dune.jpg"></a>
                         <figcaption class="md-font">Cara Dune</figcaption>
                     </figure>
@@ -136,7 +133,6 @@
                     <figure>
                         <a class="character-image"
                             href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/greef-karga-.jpeg"><img
-                                ref="image"
                                 src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/greef-karga-.jpeg"></a>
                         <figcaption class="md-font">Greef Karga</figcaption>
                     </figure>
@@ -145,7 +141,6 @@
                     <figure>
                         <a class="character-image"
                             href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/boba-fett.jpg"><img
-                                ref="image"
                                 src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/boba-fett.jpg"></a>
                         <figcaption class="md-font">Boba Fett</figcaption>
                     </figure>
@@ -154,7 +149,6 @@
                     <figure>
                         <a class="character-image"
                             href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/bo-katan.jpeg"><img
-                                ref="image"
                                 src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/bo-katan.jpeg"></a>
                         <figcaption class="md-font">Bo-Katan</figcaption>
                     </figure>
@@ -163,7 +157,6 @@
                     <figure>
                         <a class="character-image"
                             href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/ahsoka-tano.jpeg"><img
-                                ref="image"
                                 src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/ahsoka-tano.jpeg"></a>
                         <figcaption class="md-font">Ahsoka Tano</figcaption>
                     </figure>
@@ -172,7 +165,6 @@
                     <figure>
                         <a class="character-image"
                             href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/fennec-shand.jpeg"><img
-                                ref="image"
                                 src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/fennec-shand.jpeg"></a>
                         <figcaption class="md-font">Fennec Shand</figcaption>
                     </figure>
@@ -181,7 +173,6 @@
                     <figure>
                         <a class="character-image"
                             href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/moff-gideon.jpeg"><img
-                                ref="image"
                                 src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/moff-gideon.jpeg"></a>
                         <figcaption class="md-font">Moff Gideon</figcaption>
                     </figure>
