--- a/public/index.html
+++ b/public/index.html
@@ -12,17 +12,11 @@
     </script>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <meta name=”description” content="Página para fãs do seriado do Disney Plus O Mandaloriano">
     <title>Welcome to The Mandalorian Web Page</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="shortcut icon" href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/favicon/favicon.ico"
         type="image/x-icon">
-    <link rel='stylesheet' type='text/css' media='screen' href='css/index.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/theme.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/nav.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/mainTitle.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/mainImage.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/titleItem.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/section.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='css/character.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='css/facebookPlugin.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='css/footer.css'>
@@ -35,165 +29,116 @@
 </head>
 
 <body>
-    <noscript>
-        <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
-                Please enable it to continue.</strong>
-    </noscript>
     <div id="app"></div>
-        <section class="about">
-            <h2 id="title-article" class="md-font all-title">ABSTRACT</h2>
-            <article id="article">
-                <p class="p-article">The Mandalorian occurs after the fall of the Empire, as depicted in Return of the
-                    Jedi,
-                    and before the emergence of the First Order, depicted in The Force Awakens, which tells the story of
-                    an
-                    independent Mandalorian bounty hunter "in the far reaches of the galaxy, far away from the authority
-                    of
-                    the New Republic, always looking for ways to make improvements to his armor, until on a mission he
-                    ends
-                    up finding a mysterious being who needs his help, called Grogu, also known as "The Child", and
-                    chooses
-                    to run to protect the baby.While in their quest to learn more about Grogu's origins, they are
-                    pursued by
-                    Moff Gideon.</p>
-            </article>
-            <h2 id="title-cast" class="md-font all-title">CAST</h2>
-            <article id="article">
-                <p class="p-article">The series is filmed at Manhattan Beach Studios in California Filoni directed the
-                    series' first episode, making his live-action directorial debut with Rick Famuyiwa, Deborah
-                    Chow, Bryce Dallas Howard, and Taika Waititi also directing for the first season. Filoni,
-                    Howard, and Famuyiwa returned for the second season, and are joined by Favreau, who was unable
-                    to direct in the first season due to his commitments to The Lion King, Peyton Reed, co-star Carl
-                    Weathers, and Robert Rodriguez.</p>
-                <p class="p-article">In February 2021, Lucasfilm said Gina Carano, a recurring co-star during the first
-                    two
-                    seasons, was no
-                    longer employed by the company. This came after Carano made a social media post comparing being a
-                    Republican in the United States to the treatment of Jewish people during the Holocaust, with
-                    Lucasfilm
-                    saying the post was "abhorrent and unacceptable". Carano had been repeatedly warned about her social
-                    media posts by Lucasfilm executives who reportedly had been looking for a reason to fire her for two
-                    months. The February 2021 posts were "the final straw", and the decision to fire the actress was
-                    made by
-                    Lucasfilm executives rather than Favreau. The Walt Disney Company CEO Bob Chapek said Carano was
-                    fired because her posts did not align with the values of Disney, which he said were "universal" and
-                    not
-                    political.The Hollywood Reporter reported that Carano's role of Cara Dune was not expected to be
-                    recast, though industry insiders felt that was still a possibility due to story and merchandising
-                    reasons. </p>
-            </article>
-        </section>
+    <section class="characters">
+        <h2 id="title-characters" class="md-font all-title">CHARACTERS</h2>
+        <ul id="characters">
+            <li class="character-item">
+                <figure>
+                    <a class="character-image"
+                        href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/the-din-djarin.jpg"><img
+                            src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/the-din-djarin.jpg"></a>
+                    <figcaption class="md-font">Din Djarin</figcaption>
+                </figure>
+            </li>
+            <li class="character-item">
+                <figure>
+                    <a class="character-image"
+                        href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/grogu.png"><img
+                            src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/grogu.png"></a>
+                    <figcaption class="md-font">Grogu</figcaption>
+                </figure>
+            </li>
+            <li class="character-item">
+                <figure>
+                    <a class="character-image"
+                        href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/cara-dune.jpg"><img
+                            src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/cara-dune.jpg"></a>
+                    <figcaption class="md-font">Cara Dune</figcaption>
+                </figure>
+            </li>
+            <li class="character-item">
+                <figure>
+                    <a class="character-image"
+                        href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/greef-karga-.jpeg"><img
+                            src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/greef-karga-.jpeg"></a>
+                    <figcaption class="md-font">Greef Karga</figcaption>
+                </figure>
+            </li>
+            <li class="character-item">
+                <figure>
+                    <a class="character-image"
+                        href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/boba-fett.jpg"><img
+                            src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/boba-fett.jpg"></a>
+                    <figcaption class="md-font">Boba Fett</figcaption>
+                </figure>
+            </li>
+            <li class="character-item">
+                <figure>
+                    <a class="character-image"
+                        href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/bo-katan.jpeg"><img
+                            src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/bo-katan.jpeg"></a>
+                    <figcaption class="md-font">Bo-Katan</figcaption>
+                </figure>
+            </li>
+            <li class="character-item">
+                <figure>
+                    <a class="character-image"
+                        href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/ahsoka-tano.jpeg"><img
+                            src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/ahsoka-tano.jpeg"></a>
+                    <figcaption class="md-font">Ahsoka Tano</figcaption>
+                </figure>
+            </li>
+            <li class="character-item">
+                <figure>
+                    <a class="character-image"
+                        href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/fennec-shand.jpeg"><img
+                            src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/fennec-shand.jpeg"></a>
+                    <figcaption class="md-font">Fennec Shand</figcaption>
+                </figure>
+            </li>
+            <li class="character-item">
+                <figure>
+                    <a class="character-image"
+                        href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/moff-gideon.jpeg"><img
+                            src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/moff-gideon.jpeg"></a>
+                    <figcaption class="md-font">Moff Gideon</figcaption>
+                </figure>
+            </li>
+        </ul>
+    </section>
+    <section class="fb-plugin">
+        <div class="fb-page" data-href="https://www.facebook.com/the.mandalorian.page/" data-tabs="timeline"
+            data-width="200" data-height="100" data-small-header="false" data-adapt-container-width="true"
+            data-hide-cover="false" data-show-facepile="true">
+            <blockquote cite="https://www.facebook.com/the.mandalorian.page/" class="fb-xfbml-parse-ignore"><a
+                    href="https://www.facebook.com/the.mandalorian.page/">The Mandalorian Page</a></blockquote>
+        </div>
+    </section>
 
-        <section class="characters">
-            <h2 id="title-characters" class="md-font all-title">CHARACTERS</h2>
-            <ul id="characters">
-                <li class="character-item">
-                    <figure>
-                        <a class="character-image"
-                            href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/the-din-djarin.jpg"><img
-                                src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/the-din-djarin.jpg"></a>
-                        <figcaption class="md-font">Din Djarin</figcaption>
-                    </figure>
-                </li>
-                <li class="character-item">
-                    <figure>
-                        <a class="character-image"
-                            href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/grogu.png"><img
-                                src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/grogu.png"></a>
-                        <figcaption class="md-font">Grogu</figcaption>
-                    </figure>
-                </li>
-                <li class="character-item">
-                    <figure>
-                        <a class="character-image"
-                            href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/cara-dune.jpg"><img
-                                src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/cara-dune.jpg"></a>
-                        <figcaption class="md-font">Cara Dune</figcaption>
-                    </figure>
-                </li>
-                <li class="character-item">
-                    <figure>
-                        <a class="character-image"
-                            href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/greef-karga-.jpeg"><img
-                                src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/greef-karga-.jpeg"></a>
-                        <figcaption class="md-font">Greef Karga</figcaption>
-                    </figure>
-                </li>
-                <li class="character-item">
-                    <figure>
-                        <a class="character-image"
-                            href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/boba-fett.jpg"><img
-                                src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/boba-fett.jpg"></a>
-                        <figcaption class="md-font">Boba Fett</figcaption>
-                    </figure>
-                </li>
-                <li class="character-item">
-                    <figure>
-                        <a class="character-image"
-                            href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/bo-katan.jpeg"><img
-                                src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/bo-katan.jpeg"></a>
-                        <figcaption class="md-font">Bo-Katan</figcaption>
-                    </figure>
-                </li>
-                <li class="character-item">
-                    <figure>
-                        <a class="character-image"
-                            href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/ahsoka-tano.jpeg"><img
-                                src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/ahsoka-tano.jpeg"></a>
-                        <figcaption class="md-font">Ahsoka Tano</figcaption>
-                    </figure>
-                </li>
-                <li class="character-item">
-                    <figure>
-                        <a class="character-image"
-                            href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/fennec-shand.jpeg"><img
-                                src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/fennec-shand.jpeg"></a>
-                        <figcaption class="md-font">Fennec Shand</figcaption>
-                    </figure>
-                </li>
-                <li class="character-item">
-                    <figure>
-                        <a class="character-image"
-                            href="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/moff-gideon.jpeg"><img
-                                src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/personagens/moff-gideon.jpeg"></a>
-                        <figcaption class="md-font">Moff Gideon</figcaption>
-                    </figure>
-                </li>
-            </ul>
-        </section>
-        <section class="fb-plugin">
-            <div class="fb-page" data-href="https://www.facebook.com/the.mandalorian.page/" data-tabs="timeline"
-                data-width="200" data-height="100" data-small-header="false" data-adapt-container-width="true"
-                data-hide-cover="false" data-show-facepile="true">
-                <blockquote cite="https://www.facebook.com/the.mandalorian.page/" class="fb-xfbml-parse-ignore"><a
-                        href="https://www.facebook.com/the.mandalorian.page/">The Mandalorian Page</a></blockquote>
-            </div>
-        </section>
+    <footer class="footer">
+        <h3 class="md-font">DEVELOPED BY CRISTIAN PENTEADO - 2021</h3>
+        <ul class="social-media-list">
+            <li class="social-media-item"><a href="https://github.com/cristianpdev" target="_blank"><img
+                        class="social-media-image"
+                        src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/social-medias/github.svg"
+                        alt="Github"></a></li>
+            <li class="social-media-item"><a href="https://twitter.com/cristianpdev" target="_blank"><img
+                        class="social-media-image"
+                        src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/social-medias/twitter.svg"
+                        alt="Twitter"></a></li>
+            <li class="social-media-item"><a href="https://linkedin.com/in/cristian-penteado-6ab241177/"
+                    target="_blank"><img class="social-media-image"
+                        src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/social-medias/linkedin.svg"
+                        alt="Linkedin"></a></li>
+        </ul>
 
-        <footer class="footer">
-            <h3 class="md-font">DEVELOPED BY CRISTIAN PENTEADO - 2021</h3>
-            <ul class="social-media-list">
-                <li class="social-media-item"><a href="https://github.com/cristianpdev" target="_blank"><img
-                            class="social-media-image"
-                            src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/social-medias/github.svg"
-                            alt="Github"></a></li>
-                <li class="social-media-item"><a href="https://twitter.com/cristianpdev" target="_blank"><img
-                            class="social-media-image"
-                            src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/social-medias/twitter.svg"
-                            alt="Twitter"></a></li>
-                <li class="social-media-item"><a href="https://linkedin.com/in/cristian-penteado-6ab241177/"
-                        target="_blank"><img class="social-media-image"
-                            src="https://the-mandalorian-page.s3.us-east-2.amazonaws.com/social-medias/linkedin.svg"
-                            alt="Linkedin"></a></li>
-            </ul>
-
-        </footer>
+    </footer>
     </div>
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous"
         src="https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v10.0&appId=845482559160084&autoLogAppEvents=1"
         nonce="ryG8KI14"></script>
-    <!-- <script src="js/index.js"></script> -->
 </body>
 
 </html>
